Fix default block height (prevent cutoff of complete blocks)

--- a/public/css/blocks-dashboard.css
+++ b/public/css/blocks-dashboard.css
@@ -28,7 +28,7 @@ ul {
 
 .content-preview {
   line-height: 1.4;
-  max-height: 200px;
+  max-height: 220px;
   overflow: hidden;
   position: relative;
   white-space: normal;
